--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # not commiting built data discourages manually editing it
-data.csv
-
+# data.csv
+# Sorry Jesse my Azure thing isn't building it
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
