save trained model to trained_model.h5

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # data.csv
 # Sorry Jesse my Azure thing isn't building it
 
+trained_model.h5
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
